# neroued_3mf

./: .clang-format  .gitignore  AGENTS.md  CMakeLists.txt  COMMERCIAL_LICENSE.md  README.md  pyproject.toml
.cursor/: hooks.json
.cursor/hooks/: block-dangerous.sh  check-docs-sync.sh  format-cpp.sh  protect-secrets.sh
.cursor/rules/: code-structure.mdc  sync-docs.mdc
.github/workflows/: ci.yml  wheels.yml
cmake/: neroued_3mf-config.cmake.in
docs/: API.md  BUILDING.md  DESIGN.md  EXAMPLES.md
include/neroued/3mf/: builder.h  document.h  error.h  fwd.h  materials.h  neroued_3mf.h  types.h  version.h.in  watermark.h  writer.h
python/: CMakeLists.txt
python/neroued_3mf/: __init__.py
python/src/: bind.cpp
python/tests/: conftest.py  test_basic.py
src/: builder.cpp  opc.cpp  opc.h  types.cpp  watermark_detect.cpp  writer.cpp  zip.cpp  zip.h
src/internal/: omp_config.h  opc_types.h  sha256.h  validate.h  watermark.h  xml_stream_buffer.h  xml_util.h  zip_read.h
tests/: CMakeLists.txt  test_builder.cpp  test_types.cpp  test_writer.cpp
tools/: detect_watermark.cpp  generate_test_3mf.cpp
