# SPDX-License-Identifier: AGPL-3.0-or-later
# Copyright (c) 2026 neroued

[build-system]
requires = ["scikit-build-core>=0.12", "nanobind>=2.12", "setuptools-scm>=8"]
build-backend = "scikit_build_core.build"

# ── Project metadata ─────────────────────────────────────────────────────────

[project]
name = "neroued-3mf"
dynamic = ["version"]
description = "Lightweight Python bindings for writing 3MF files"
requires-python = ">=3.10"
license = "AGPL-3.0-or-later"
authors = [{ name = "neroued" }]
keywords = ["3mf", "3d-printing", "mesh", "cad"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Manufacturing",
    "Topic :: Scientific/Engineering",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: C++",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/neroued/neroued_3mf"
Repository = "https://github.com/neroued/neroued_3mf"
Issues = "https://github.com/neroued/neroued_3mf/issues"

# ── scikit-build-core ─────────────────────────────────────────────────────────

[tool.scikit-build]
cmake.source-dir = "python"
cmake.build-type = "Release"
wheel.packages = ["python/neroued_3mf"]

[tool.scikit-build.cmake.define]
N3MF_BUILD_TESTS = "OFF"

[tool.scikit-build.metadata.version]
provider = "scikit_build_core.metadata.setuptools_scm"

[tool.setuptools_scm]
version_scheme = "guess-next-dev"
local_scheme = "node-and-date"

# ── cibuildwheel ──────────────────────────────────────────────────────────────

[tool.cibuildwheel]
build = "cp310-* cp311-* cp312-*"
skip = "*-win32 *-manylinux_i686 *-musllinux*"
test-requires = ["pytest"]
test-command = "pytest {project}/python/tests -v"
environment-pass = ["SETUPTOOLS_SCM_PRETEND_VERSION"]

[tool.cibuildwheel.linux]
before-all = "yum install -y zlib-devel || true"
manylinux-x86_64-image = "manylinux_2_28"

[tool.cibuildwheel.macos]
environment = { MACOSX_DEPLOYMENT_TARGET = "13.0" }
test-skip = "*-macosx_x86_64"

[tool.cibuildwheel.windows]
before-all = "vcpkg install zlib:x64-windows"
before-build = "pip install delvewheel"
repair-wheel-command = "delvewheel repair --add-path C:/vcpkg/installed/x64-windows/bin -w {dest_dir} {wheel}"
environment = { CMAKE_TOOLCHAIN_FILE = "C:/vcpkg/scripts/buildsystems/vcpkg.cmake", SKBUILD_CMAKE_DEFINE = "VCPKG_TARGET_TRIPLET=x64-windows" }
